Definitions version fallback (#9322 OPSC-16161)